creating json in the js

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,16 +10,16 @@
     <div class = "consumer-form">
         <h2>Consumer</h2>
         <div class = "form-row">
-            <input type="text" name="topic-consumer" placeholder="Topic">
+            <input type="text" id = "topic-consumer" name="topic-consumer" placeholder="Topic">
             <button type="button" id = "consume-button">Submit</button>
         </div>
     </div>
     <div class = "producer-form">
         <h2>Producer</h2>
         <div class = "form-row">
-            <input type="text" name="topic-producer" placeholder="Topic">
-            <input type="text" name="event-name" placeholder="Event name">
-            <input type="text" name="event-description" placeholder="Event description">
+            <input type="text" name="topic-producer" id="topic-producer"   placeholder="Topic">
+            <input type="text" name="event-name" id="event-name" placeholder="Event name">
+            <input type="text" name="event-description"  id="event-description"placeholder="Event description">
             <button type="button" id = "produce-button">Submit</button>
         </div>
     </div>
